create github pages

--- a/saude_consultas_exames_economia_acessivel.html
+++ b/saude_consultas_exames_economia_acessivel.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="carousel slide cid-s7pVsDpx8c" data-interval="false" id="slider1-23">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="carousel slide cid-s7pVsDpx8c" data-interval="false" id="slider1-23">
 
     
 
@@ -815,7 +815,7 @@ Os médicos são ótimos e o atendimento do Ven Club é nota 10!"<o:p></o:p></sp
     </div>   
 </section>
 
-<section once="footers" class="cid-s7q0YIc51L mbr-reveal" id="footer7-25">
+<section once="footers" class="cid-s7q0YIc51L" id="footer7-25">
 
     
 
@@ -863,9 +863,8 @@ Os médicos são ótimos e o atendimento do Ven Club é nota 10!"<o:p></o:p></sp
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2020 - Ven Club - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© 2020 Ven Club o seu Clube de Benefícios - Todos os direitos reservados. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Desenvolvido por: Agência Pro Future &nbsp;<a href="http://www.agenciaprofuture.com.br">www.agenciaprofuture.com.br</a><br>
+<br></p>
             </div>
         </div>
     </div>
