create github pages

--- a/saude_consultas_exames_economia_acessivel.html
+++ b/saude_consultas_exames_economia_acessivel.html
@@ -56,15 +56,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="saude_consultas_exames_economia_acessivel.html#slider1-23">
+                    <a class="nav-link link text-warning display-4" href="saude_consultas_exames_economia_acessivel.html#slider1-23">
                         INÍCIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="saude_consultas_exames_economia_acessivel.html#video3-1u">SOBRE NÓS</a>
-                </li><li class="nav-item"><a class="nav-link link text-danger display-4" href="saude_consultas_exames_economia_acessivel.html#header5-20" aria-expanded="false">
-                        REDE&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="saude_consultas_exames_economia_acessivel.html#header5-21" aria-expanded="false">
-                        BENEFÍCIOS</a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="saude_consultas_exames_economia_acessivel.html#table1-m" aria-expanded="false">
-                        ECONOMIA</a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="https://www.primefidelity.com.br/clubcard/plans-pricing/selecao_planos.aspx?rc=" aria-expanded="false">ADESÃO</a></li></ul>
+                    <a class="nav-link link text-warning display-4" href="saude_consultas_exames_economia_acessivel.html#video3-1u">SOBRE NÓS</a>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="saude_consultas_exames_economia_acessivel.html#header5-20" aria-expanded="false">
+                        REDE&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="saude_consultas_exames_economia_acessivel.html#header5-21" aria-expanded="false">
+                        BENEFÍCIOS</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="saude_consultas_exames_economia_acessivel.html#table1-m" aria-expanded="false">
+                        ECONOMIA</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="https://www.primefidelity.com.br/clubcard/plans-pricing/selecao_planos.aspx?rc=" aria-expanded="false">ADESÃO</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.primefidelity.com.br/login.aspx?partner=7774357336" target="_blank">
                     
                     CONTA DIGITAL</a> <a class="btn btn-sm btn-primary display-4" href="http://134.209.124.131/#/login" target="_blank">
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="carousel slide cid-s7pVsDpx8c" data-interval="false" id="slider1-23">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="carousel slide cid-s7pVsDpx8c" data-interval="false" id="slider1-23">
 
     
 
